Lab02/files/pro/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: weatherapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  tls:
    - hosts:
      - weatherapp.ru
      secretName: weatherapp-tls
      
  rules:
  - host: weatherapp.ru
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: weatherapp-service
            port: 
              number: 80
